envoy-gateway/httproute/mirror/tls-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.example.com"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mirror-tls-backend
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /mirror-tls
      filters:
        - type: RequestMirror
          requestMirror:
            backendRef:
              group: gateway.envoyproxy.io
              kind: Backend
              name: mirror-tls-backend
      backendRefs:
        - name: tls-backend-1
          port: 443
---
apiVersion: v1
kind: Service
metadata:
  name: tls-backend-1
spec:
  selector:
    app: tls-backend-1
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tls-backend-1
  labels:
    app: tls-backend-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tls-backend-1
  template:
    metadata:
      labels:
        app: tls-backend-1
    spec:
      containers:
        - name: tls-backend
          image: registry.k8s.io/gateway-api/conformance/echo-basic:v0.1.0
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/secret-volume
          resources:
            requests:
              cpu: 10m
      volumes:
        - name: secret-volume
          secret:
            secretName: tls-backend-1-cert
            items:
              - key: tls.crt
                path: crt
              - key: tls.key
                path: key
---
# curl -vk --resolve mirror.example.com:443:172.18.255.201 https://mirror.example.com/
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg-https
spec:
  gatewayClassName: eg
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "mirror.example.com"
      tls:
        mode: Terminate
        certificateRefs:
          - name: mirror-tls-backend-cert
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: eg-https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 3000
